--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chemist Management System</title>
     <meta name="description" content="For Seamless Sales and Tracking" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="" />
 
     <meta property="og:title" content="x-manager-ai" />
     <meta property="og:description" content="" />
