--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" href="/faviconn.jpg" type="image/jpeg" />
+
     <title>Chemist Management System</title>
     <meta name="description" content="For Seamless Sales and Tracking" />
     <meta name="author" content="" />
