--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="For Seamless Sales and Tracking" />
     <meta name="author" content="" />
 
-    <meta property="og:title" content="x-manager-ai" />
+    <meta property="og:title" content="" />
     <meta property="og:description" content="" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
